--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.21.0",
+    "multer": "^2.0.2",
     "neo4j-driver": "^5.28.3"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.30",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
